<resources>
    <string name="app_name">Пригородный транспорт Минск</string>
    <string name="btn_text">Привет</string>
    <string name="btn2_text">click</string>
    <string name="title">Расписание</string>
    <string name="route">Выбор маршрута</string>
    <string name="start">Начало</string>
    <string name="end">Конец</string>
    <string name="find">НАЙТИ</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="saveRoute">Сохранить маршрут</string>
    <string name="activitySaved">Сохраненные маршруты</string>
    <string name="activityNew">Новый маршрут</string>
    <string name="activityRefresh">Обновить базы</string>
    <string name="activityAbout">О приложении</string>
    <string name="textStart">Из:</string>
    <string name="textEnd">В:</string>
    <string name="textStart2">Из</string>
    <string name="textEnd2">В</string>
    <string name="textRegularity">Регулярность</string>
    <string name="textNumber">№</string>
    <string-array name="heads_menu">
        <item>Сохраненные маршруты</item>
        <item>Новый маршрут</item>
        <item>Обновить базы</item>
        <item></item>
        <item>О приложении</item>
    </string-array>
    <string name="saved">Сохраненные маршруты</string>
    <string name="switchMonday">ПН</string>
    <string name="switchTuesday">ВТ</string>
    <string name="switchWednesday">СР</string>
    <string name="switchThursday">ЧТ</string>
    <string name="switchFriday">ПТ</string>
    <string name="switchSaturday">СБ</string>
    <string name="switchSunday">ВС</string>
    <string name="about">О приложении</string>
    <string name="text_about">Приложение сделано на основе данных с сайта www.minsktrans.by.\nЗдесь можно посмотреть и сохранить маршрут пригородных автобусов, зная начальную и конечную остановку, при этом имея их актуальное расписание.
    \nВаши варианты и предложения можете присылать на pasha_mugako@mail.ru.
    \nРазработано Пашей.</string>
</resources>
