<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout_chosen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
        <TextView
                android:text="@string/route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/route_chosen"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/blue2"
                android:textColor="@color/white"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:columnCount="5">
            <TextView
                    android:text="@string/textStart2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textSize="16sp"
                    android:background="@color/blue2"
                    android:textColor="@color/white"/>
            <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>
            <TextView
                    android:text="@string/textEnd2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textSize="16sp"
                    android:background="@color/blue2"
                    android:textColor="@color/white"/>
            <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>
            <TextView
                    android:text="@string/textNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textSize="16sp"
                    android:background="@color/blue2"
                    android:textColor="@color/white"/>
            <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>
            <TextView
                    android:text="@string/textRegularity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.4"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:textSize="16sp"
                    android:background="@color/blue2"
                    android:textColor="@color/white"/>
        </LinearLayout>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/result_chosen"
                android:layout_weight="13"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/blue2"/>
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:orientation="horizontal">
            <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleMondayChosen"
                    android:layout_weight="1"
                    android:textOn="@string/switchMonday"
                    android:textOff="@string/switchMonday"
                    android:textSize="19sp"
                    android:padding="0dp"
                    android:background="@color/switcher"/>
            <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/blue2"/>
            <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleTuesdayChosen"
                    android:layout_weight="1"
                    android:textOn="@string/switchTuesday"
                    android:textOff="@string/switchTuesday"
                    android:textSize="19sp"
                    android:padding="0dp"
                    android:background="@color/switcher"/>
            <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/blue2"/>
            <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleWednesdayChosen"
                    android:layout_weight="1"
                    android:textOn="@string/switchWednesday"
                    android:textOff="@string/switchWednesday"
                    android:textSize="19sp"
                    android:padding="0dp"
                    android:background="@color/switcher"/>
            <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/blue2"/>
            <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleThursdayChosen"
                    android:layout_weight="1"
                    android:textOn="@string/switchThursday"
                    android:textOff="@string/switchThursday"
                    android:textSize="19sp"
                    android:padding="0dp"
                    android:background="@color/switcher"/>
            <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/blue2"/>
            <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleFridayChosen"
                    android:layout_weight="1"
                    android:textOn="@string/switchFriday"
                    android:textOff="@string/switchFriday"
                    android:textSize="19sp"
                    android:padding="0dp"
                    android:background="@color/switcher"/>
            <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/blue2"/>
            <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleSaturdayChosen"
                    android:layout_weight="1"
                    android:textOn="@string/switchSaturday"
                    android:textOff="@string/switchSaturday"
                    android:textSize="19sp"
                    android:padding="0dp"
                    android:background="@color/switcher"/>
            <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/blue2"/>
            <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleSundayChosen"
                    android:layout_weight="1"
                    android:textOn="@string/switchSunday"
                    android:textOff="@string/switchSunday"
                    android:textSize="19sp"
                    android:padding="0dp"
                    android:background="@color/switcher"/>
        </LinearLayout>
    </LinearLayout>

    <!-- The navigation drawer -->
    <ListView
            android:id="@+id/left_drawer_chosen"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#111"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"/>

</android.support.v4.widget.DrawerLayout>